--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 			<div class="row">
 				<div class="col-lg-4 dg">
 					<h4 class="ml">FACEBOOK</h4>
-					<p class="centered"><a href="#"><i class="fa fa-facebook"></i></a></p>
+					<p class="centered"><a href="https://www.facebook.com/thecreativeDNA"><i class="fa fa-facebook"></i></a></p>
 					<p class="ml">> Become A Friend</p>
 				</div>
 				<div class="col-lg-4 lg">
