--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 			<div class="row">
 				<div class="col-lg-8">
 		        	<div id="mapwrap">
-						<iframe height="400" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.es/maps?t=m&amp;ie=UTF8&amp;ll=0.3229765&amp;spn=32.576219700000024&amp;z=20&amp;output=embed"></iframe>
+						<iframe height="400" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://https://www.google.co.ug/maps?t=m&amp;ie=UTF8&amp;ll=0.3229765&amp;spn=32.576219700000024&amp;z=20&amp;output=embed"></iframe>
 					</div>	
 				</div><!--col-lg-8-->
 				<div class="col-lg-4">
