--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
     
-    <script src="assets/js/modernizr.custom.js"></script>
+    <script src="assets/js/modernizr.custom.js">
     var myLatlng = new google.maps.LatLng(latitude,longitude);
 var marker = new google.maps.Marker({
   position: myLatlng,
   map: map,
   title:"creativeDNA headOffice"
 });
-    
+    </script>
   </head>
 
   <body>
