--- a/about.html
+++ b/about.html
@@ -170,7 +170,7 @@
 	<div class="container">
 		<div class="row mt centered">
 			<div class="col-lg-4">
-				<img src="assets/img/team/gianni.png" alt="Gianni">
+				<img src="assets/img/team/brian.png" alt="Bryan">
 				<div class="cardinfo">
 					<h4><b>BRYAN LAMTOO</b></h4>
 					<h6>MANAGING DIRECTOR</h6>
@@ -179,7 +179,7 @@
 				</div>
 			</div>
 			<div class="col-lg-4">
-				<img src="assets/img/team/rebecca.png" alt="Rebecca">
+				<img src="assets/img/team/chris.png" alt="Chris">
 				<div class="cardinfo">
 					<h4><b>CHRIS ONYANCHA</b></h4>
 					<h6>DIRECTOR</h6>
@@ -188,7 +188,7 @@
 				</div>
 			</div>
 			<div class="col-lg-4">
-				<img src="assets/img/team/william.png" alt="Gianni">
+				<img src="assets/img/team/elijah.png" alt="Elijah">
 				<div class="cardinfo">
 					<h4><b>ELIJAH ATUHAIRE</b></h4>
 					<h6>DIRECTOR</h6>
