--- a/about.html
+++ b/about.html
@@ -182,7 +182,7 @@
 				<img src="assets/img/team/chris.png" alt="Chris">
 				<div class="cardinfo">
 					<h4><b>CHRIS ONYANCHA</b></h4>
-					<h6>DIRECTOR</h6>
+					<h6>DIRECTOR/PROGRAMMER</h6>
 					
 					<p><a href="#"><i class="fa fa-facebook"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-envelope"></i></a></p>
 				</div>
