--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@ var marker = new google.maps.Marker({
 		<div class="row mt">
 			<div class="col-lg-4">
 				<img class="img-responsive" src="assets/img/post01.jpg" alt="">
-				<h3><a href="#">Designing for the reader experience</a></h3>
-				<p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+				<h3><a href="#">Testing BETA version of the NTV GO mobile APP</a></h3>
+				<p>We are currently in the testing phase of the official NTV Uganda mobile application.</p>
 				<p><a href="#"><i class="fa fa-link"></i> Read More</a></p>
 			</div>
 			<div class="col-lg-4">
