--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
-
+<link rel="icon" href="assets/img/ic_launcher.png" >
     <!-- Custom styles for this template -->
     <link href="assets/css/main.css" rel="stylesheet">
 
