--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
-<link rel="icon" href="assets/img/ic_launcher.png" >
+<link rel="icon" type="images/png" href="assets/img/ic_launcher.png" >
     <!-- Custom styles for this template -->
     <link href="assets/css/main.css" rel="stylesheet">
 
@@ -88,7 +88,7 @@ var marker = new google.maps.Marker({
     
     <!-- PORTFOLIO SECTION -->
     <div id="portfolio">
-    	<div class="container"
+    	<div class="container">
 	    	<div class="row mt">
 				<ul class="grid effect-2" id="grid">
 					<li><a href=""><img src="assets/img/portfolio/1.jpg"></a></li>
