--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@ var marker = new google.maps.Marker({
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-8 col-lg-offset-2">
-					<h1>creative DNA</h1>
-					<h2>Magical Wonders</h2>
+					<!--<h1>NTV GO</h1>
+					<h2>Magical Wonders</h2>-->
 					<div class="spacer"></div>
-					<i class="fa fa-angle-down"></i>
+					<!--<i class="fa fa-angle-down"></i>-->
 				</div>
 			</div><!-- row -->
 		</div><!-- /container -->
@@ -186,7 +186,7 @@ var marker = new google.maps.Marker({
 	
 	<!-- CLIENTS LOGOS -->
 	<div id="lg">
-		<div class="container">
+		<!--<div class="container">
 			<div class="row centered">
 			  <div class="col-lg-2" style="float:right">
 				  <img src="assets/img/clients/c03.gif" alt="">
@@ -249,8 +249,9 @@ var marker = new google.maps.Marker({
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-8">
-		        	<div id="mapwrap">
-						<iframe height="400" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.co.ug/maps?t=m&amp;ie=UTF8&hl=en&msa=0&msid=208023577543881741272.00000111d236e89e8ed37;ll=0.3229765&amp;spn=32.576219700000024&amp;z=8&amp;output=embed"></iframe>
+		        	<div id="mapwrap">                   
+                        
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3989.7549198682937!2d32.57631500000002!3d0.3230040000000008!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x177dbb7a196c73c3%3A0xf3f534e6f1300573!2sOutbox+Hub!5e0!3m2!1sen!2sug!4v1409047303488" width="100%" height="400" frameborder="0" style="border:0"></iframe>
 					</div>	
 				</div><!--col-lg-8-->
 				<div class="col-lg-4">
