Added Google+ link

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="shortcut icon" href="assets/img/ic_launcher.png">
+    
 
     <title>creativeDNA - Magical Wonders</title>
 
@@ -67,8 +68,7 @@ var marker = new google.maps.Marker({
 					<!--<h1>NTV GO</h1>
 					<h2>Magical Wonders</h2>-->
 					<div class="spacer"></div>
-					<!--<i class="fa fa-angle-down"></i>-->
-				</div>
+					<i style="margin-top:300px; margin-left:100px"  class="fa fa-angle-down"></i>-				</div>
 			</div><!-- row -->
 		</div><!-- /container -->
 	</div><!-- /headerwrap -->
@@ -237,7 +237,7 @@ var marker = new google.maps.Marker({
 				</div>
 				<div class="col-lg-4 dg">
 					<h4 class="ml">GOOGLE +</h4>
-					<p class="centered"><a href="#"><i class="fa fa-google-plus"></i></a></p>
+					<p class="centered"><a href="https://plus.google.com/102078034045852601576" rel="publisher">Google+</a><i class="fa fa-google-plus"></i></a></p>
 					<p class="ml">> Add Us To Your Circle</p>
 				</div>
 			</div><!-- row -->
@@ -261,9 +261,8 @@ var marker = new google.maps.Marker({
 						Soliz hse, Lumumba Ave 987,<br/>
 						Kampala, Uganda.
 					</p>
-					<p>
+					<p> P: +256 703 773532<br/>
 						P: +256 779 273959<br/>
-						P: +256 703 773532<br/>
                         P: +256 711 830795<br/>
 						E: <a href="mailto:#">creativedna14@gmail.com</a>
 					</p>
