--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@ var marker = new google.maps.Marker({
 				</div>
 				<div class="col-lg-4 dg">
 					<h4 class="ml">GOOGLE +</h4>
-					<p class="centered"><a href="https://plus.google.com/102078034045852601576" rel="publisher">Google+</a><i class="fa fa-google-plus"></i></a></p>
+					<p class="centered"><a href="https://plus.google.com/102078034045852601576" rel="publisher" /><i class="fa fa-google-plus"></i></a></p>
 					<p class="ml">> Add Us To Your Circle</p>
 				</div>
 			</div><!-- row -->
