--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ var marker = new google.maps.Marker({
 					<li><a href=""><img src="assets/img/portfolio/2.jpg"></a></li>
 					<li><a href=""><img src="assets/img/portfolio/14.png"></a></li>
 					<li><a href=""><img src="assets/img/portfolio/5.jpg"></a></li>
-					<li><a href=""><img src="assets/img/portfolio/6.jpg"></a></li>
+					<li><a href=""><img src="assets/img/portfolio/optimus.jpg"></a></li>
 					<li><a href=""><img src="assets/img/portfolio/7.jpg"></a></li>
 					<li><a href=""><img src="assets/img/portfolio/6.jpg"></a></li>
 					<li><a href=""><img src="assets/img/portfolio/9.jpg"></a></li>
