--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ var marker = new google.maps.Marker({
 				<img class="img-responsive" src="assets/img/post01.jpg" alt="">
 				<h3><a href="#">Testing BETA version of the NTV GO mobile APP</a></h3>
 				<p>We are currently in the testing phase of the official NTV Uganda mobile application.</p>
-				<p><a href="#"><i class="fa fa-link"></i> Read More</a></p>
+				<p><a href="https://groups.google.com/forum/#!forum/ntv-uganda-news-app-beta-testing"><i class="fa fa-link"></i> Become a tester!</a></p>
 			</div>
 			<div class="col-lg-4">
 				<img class="img-responsive" src="assets/img/post02.jpg" alt="">
@@ -227,7 +227,7 @@ var marker = new google.maps.Marker({
 			<div class="row">
 				<div class="col-lg-4 dg">
 					<h4 class="ml">FACEBOOK</h4>
-					<p class="centered"><a href="https://www.facebook.com/thecreativeDNA"><i class="fa fa-facebook"></i></a></p>
+					<p class="centered"><a href="https://www.facebook.com/thecreativeDNA" target="_blank"><i class="fa fa-facebook"></i></a></p>
 					<p class="ml">> Become A Friend</p>
 				</div>
 				<div class="col-lg-4 lg">
@@ -237,7 +237,7 @@ var marker = new google.maps.Marker({
 				</div>
 				<div class="col-lg-4 dg">
 					<h4 class="ml">GOOGLE +</h4>
-					<p class="centered"><a href="https://plus.google.com/102078034045852601576" rel="publisher" /><i class="fa fa-google-plus"></i></a></p>
+					<p class="centered"><a href="https://plus.google.com/102078034045852601576" rel="publisher" target="_blank" /><i class="fa fa-google-plus"></i></a></p>
 					<p class="ml">> Add Us To Your Circle</p>
 				</div>
 			</div><!-- row -->
