--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ var marker = new google.maps.Marker({
 				<img class="img-responsive" src="assets/img/post01.jpg" alt="">
 				<h3><a href="#">Testing BETA version of the NTV GO mobile APP</a></h3>
 				<p>We are currently in the testing phase of the official NTV Uganda mobile application.</p>
-				<p><a href="https://groups.google.com/forum/#!forum/ntv-uganda-news-app-beta-testing"><i class="fa fa-link"></i> Become a tester!</a></p>
+				<p><a href="https://groups.google.com/forum/#!forum/ntv-uganda-news-app-beta-testing" target="_blank"><i class="fa fa-link"></i> Become a tester!</a></p>
 			</div>
 			<div class="col-lg-4">
 				<img class="img-responsive" src="assets/img/post02.jpg" alt="">
