--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@ var marker = new google.maps.Marker({
 			<a href="portfolio.html">Vision</a>
 			<a href="about.html">About</a>
 			<a href="#contact">Contact</a>
-			<a href="#"><i class="fa fa-facebook"></i></a>
+			<a href="https://www.facebook.com/thecreativeDNA" target="_blank"><i class="fa fa-facebook"><i class="fa fa-facebook"></i></a>
 			<a href="#"><i class="fa fa-twitter"></i></a>
 			<a href="#"><i class="fa fa-dribbble"></i></a>
-			<a href="#"><i class="fa fa-envelope"></i></a>
+			<a href="https://plus.google.com/102078034045852601576" rel="publisher" target="_blank"><i class="fa fa-envelope"></i></a>
 		</div>
 		
 		<!-- Menu button -->
@@ -172,7 +172,7 @@ var marker = new google.maps.Marker({
 				<img class="img-responsive" src="assets/img/post02.jpg" alt="">
 				<h3><a href="#">25 Examples of flat web & application design</a></h3>
 				<p>Here are among others the most beautiful designs ranked by users to have been used around the world for wed and mobile apps.</p>
-				<p><a href="#"><i class="fa fa-link"></i> Read More</a></p>
+				<p><a href="#"><i class="singleproject.html"></i> Read More</a></p>
 			</div>
 			<div class="col-lg-4">
 				<img class="img-responsive" src="assets/img/post03.jpg" alt="">
