--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@ var marker = new google.maps.Marker({
 			<a href="portfolio.html">Vision</a>
 			<a href="about.html">About</a>
 			<a href="#contact">Contact</a>
-			<a href="#"><i class="fa fa-facebook"></i></a>
+			<a href="https://www.facebook.com/thecreativeDNA" target="_blank"><i class="fa fa-facebook"></i></a>
 			<a href="#"><i class="fa fa-twitter"></i></a>
 			<a href="#"><i class="fa fa-dribbble"></i></a>
-			<a href="#"><i class="fa fa-envelope"></i></a>
+			<a href="https://plus.google.com/102078034045852601576" target="_blank"><i class="fa fa-envelope"></i></a>
 		</div>
 		
 		<!-- Menu button -->
