--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@ var marker = new google.maps.Marker({
 	<!-- Menu -->
 	<nav class="menu" id="theMenu">
 		<div class="menu-wrap">
+			
 			<h1 class="logo"><a href="index.html#home">creativeDNA</a></h1>
 			<i class="fa fa-arrow-right menu-close"></i>
 			<a href="index.html">Home</a>
@@ -50,10 +51,11 @@ var marker = new google.maps.Marker({
 			<a href="portfolio.html">Vision</a>
 			<a href="about.html">About</a>
 			<a href="#contact">Contact</a>
-			<a href="https://www.facebook.com/thecreativeDNA" target="_blank"><i class="fa fa-facebook"><i class="fa fa-facebook"></i></a>
+			<a href="#"><i class="fa fa-facebook"></i></a>
 			<a href="#"><i class="fa fa-twitter"></i></a>
 			<a href="#"><i class="fa fa-dribbble"></i></a>
-			<a href="https://plus.google.com/102078034045852601576" rel="publisher" target="_blank"><i class="fa fa-envelope"></i></a>
+			<a href="#"><i class="fa fa-envelope"></i></a>
+		
 		</div>
 		
 		<!-- Menu button -->
