--- a/index.html
+++ b/index.html
@@ -179,9 +179,9 @@ var marker = new google.maps.Marker({
 				<h3><a href="#">25 Examples of flat web & application design</a></h3>
 				<p>Here are among others the most beautiful designs ranked by users to have been used around the world for wed and mobile apps.</p>
 
-				<p><a href="#"><i class="fa fa-link"></i> Read More</a></p>
+				<p><a href="singleproject.html"><i class="fa fa-link"></i> Read More</a></p>
 
-				<p><a href="singleproject.html"><i class=""></i> Read More</a></p>
+				
 
 			</div>
 			<div class="col-lg-4">
