--- a/about.html
+++ b/about.html
@@ -178,7 +178,7 @@ var marker = new google.maps.Marker({
 	<div class="container">
 		<div class="row mt centered">
 			<div class="col-lg-4">
-				<img src="assets/img/team/brian.png" alt="Bryan">
+			<!-- 	<img src="assets/img/team/brian.png" alt="Bryan">-->
 				<div class="cardinfo">
 					<h4><b>BRYAN LAMTOO</b></h4>
 					<h6>MANAGING DIRECTOR</h6>
@@ -187,7 +187,7 @@ var marker = new google.maps.Marker({
 				</div>
 			</div>
 			<div class="col-lg-4">
-				<img src="assets/img/team/chris.png" alt="Chris">
+			<!--	<img src="assets/img/team/chris.png" alt="Chris">-->
 				<div class="cardinfo">
 					<h4><b>CHRIS ONYANCHA</b></h4>
 					<h6>DIRECTOR/PROGRAMMER</h6>
@@ -196,7 +196,7 @@ var marker = new google.maps.Marker({
 				</div>
 			</div>
 			<div class="col-lg-4">
-				<img src="assets/img/team/elijah.png" alt="Elijah">
+				<!--<img src="assets/img/team/elijah.png" alt="Elijah">-->
 				<div class="cardinfo">
 					<h4><b>ELIJAH ATUHAIRE</b></h4>
 					<h6>DIRECTOR</h6>
